--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.dagger:dagger:2.37'
+    implementation "androidx.datastore:datastore:1.0.0-rc01"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
     kapt 'com.google.dagger:dagger-compiler:2.37'
     implementation 'com.google.dagger:hilt-android:2.37'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
