--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
+
 }
 
 android {
@@ -49,13 +51,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     kapt "androidx.room:room-compiler:2.3.0"
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.dagger:dagger:2.37'
-    implementation "androidx.datastore:datastore:1.0.0-rc01"
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
+    implementation "androidx.datastore:datastore:1.0.0-rc02"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
     kapt 'com.google.dagger:dagger-compiler:2.37'
     implementation 'com.google.dagger:hilt-android:2.37'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
