--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
@@ -42,8 +43,9 @@ android {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation "androidx.room:room-ktx:2.3.0"
@@ -57,8 +59,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.dagger:dagger:2.37'
-    implementation "androidx.datastore:datastore:1.0.0-rc02"
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
+    implementation "androidx.datastore:datastore:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     kapt 'com.google.dagger:dagger-compiler:2.37'
     implementation 'com.google.dagger:hilt-android:2.37'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
