--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,8 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
-
+    id 'com.google.firebase.firebase-perf'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -44,7 +45,11 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation 'com.google.firebase:firebase-perf'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation 'androidx.core:core-ktx:1.6.0'
