--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
-
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation 'androidx.core:core-ktx:1.6.0'
